[gd_scene load_steps=27 format=3 uid="uid://bxi1h5wf54pjq"]

[ext_resource type="Script" path="res://SampleProject/enemies/BoneScimitar/BoneScimitar.gd" id="1_nyag5"]
[ext_resource type="Script" path="res://SampleProject/Scripts/EnemyStats.gd" id="2_htfae"]
[ext_resource type="Texture2D" uid="uid://dbqryxsec57ud" path="res://assets/sprites/Enemies/boneScimitar.png" id="3_lgc47"]
[ext_resource type="Script" path="res://SampleProject/Scripts/polyphonic_audio_player.gd" id="4_g6mor"]
[ext_resource type="Script" path="res://SampleProject/Scripts/AudioLibrary.gd" id="5_428xb"]
[ext_resource type="Script" path="res://SampleProject/Scripts/soundEffect.gd" id="6_2nio2"]
[ext_resource type="AudioStream" uid="uid://c1mpwbjmbcwi4" path="res://assets/sounds/ThrowBone.MP3" id="7_x3lvv"]
[ext_resource type="Script" path="res://SampleProject/Scripts/damage_location.gd" id="8_pbxox"]
[ext_resource type="PackedScene" uid="uid://beartgufu5i2u" path="res://SampleProject/extra_scenes/floating_numbers.tscn" id="9_g8e0w"]
[ext_resource type="Script" path="res://SampleProject/enemies/BoneScimitar/BoneScimitarIdle.gd" id="10_gf0n5"]
[ext_resource type="Script" path="res://SampleProject/enemies/BoneScimitar/BoneScimitarMoving.gd" id="11_rrmqf"]
[ext_resource type="Script" path="res://SampleProject/enemies/BoneScimitar/BoneScimitarAttack.gd" id="12_dyui7"]
[ext_resource type="Script" path="res://SampleProject/enemies/BoneScimitar/BoneScimitarDying.gd" id="13_804yl"]
[ext_resource type="PackedScene" uid="uid://dd3s67ealy03f" path="res://SampleProject/enemies/BoneScimitar/scimitar_shatter.tscn" id="14_l3b8s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cx7u"]
size = Vector2(26.5217, 41.3043)

[sub_resource type="Resource" id="Resource_l68mg"]
script = ExtResource("6_2nio2")
Tag = "throw"
stream = ExtResource("7_x3lvv")

[sub_resource type="Resource" id="Resource_d3atb"]
script = ExtResource("5_428xb")
sound_effects = Array[ExtResource("6_2nio2")]([SubResource("Resource_l68mg")])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q5s4o"]
size = Vector2(21.3043, 33.913)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_01brj"]
size = Vector2(23.913, 14.3478)

[sub_resource type="GDScript" id="GDScript_8q4jf"]
script/source = "extends Node
class_name StateMachine

@export var initial_state: State
@export var player: CharacterBody2D
@export var animation: AnimationPlayer
@onready var polyphonic_audio_player: PolyphonicAudio = $\"../PolyphonicAudioPlayer\"

var current_state: State
var states: Dictionary = {}

func _ready():
	for child in get_children():
		if child is State:
			states[child.name.to_lower()] = child
			child.Transitioned.connect(on_child_transition)
			child.player = player
			child.sound = polyphonic_audio_player
			child.animation = animation
		
	if initial_state:
		initial_state.enter()
		current_state = initial_state
	
func _process(delta):
	if current_state:
		current_state.Update(delta)
	
func _physics_process(delta: float) -> void:
	if current_state:
		current_state.Physics_Update(delta)

func on_child_transition(state, new_state_name):
	if state != current_state:
		return
	
	var new_state = states.get(new_state_name.to_lower())
	if !new_state:
		return
		
	if current_state:
		current_state.exit()
		
	new_state.enter()
	current_state = new_state
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vkvec"]
size = Vector2(280.435, 73.2609)

[sub_resource type="Animation" id="Animation_ardas"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword/Hitbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bh8w8"]
resource_name = "attack"
length = 1.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PolyphonicAudioPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": ["throw"],
"method": &"play_sound_effect_from_library"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sword/Hitbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_28tq2"]
resource_name = "idle"
length = 0.7
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1, 0]
}

[sub_resource type="Animation" id="Animation_wnuo6"]
resource_name = "moving"
length = 0.6
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14, 15]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ipue8"]
_data = {
"RESET": SubResource("Animation_ardas"),
"attack": SubResource("Animation_bh8w8"),
"idle": SubResource("Animation_28tq2"),
"moving": SubResource("Animation_wnuo6")
}

[node name="BoneScimitar" type="CharacterBody2D" node_paths=PackedStringArray("vision", "sword_hitbox", "sprite", "hitbox", "stats", "damage_popup", "iframe_timer", "hitbox_iframe")]
scale = Vector2(2.3, 2.3)
collision_layer = 4
script = ExtResource("1_nyag5")
vision = NodePath("Area of Vision")
sword_hitbox = NodePath("Sword")
sprite = NodePath("Sprite2D")
hitbox = NodePath("Area2D")
stats = NodePath("EnemyStats")
damage_popup = NodePath("DamageLocation")
iframe_timer = NodePath("Area2D/Timer")
hitbox_iframe = NodePath("Area2D")

[node name="EnemyStats" type="Node" parent="."]
script = ExtResource("2_htfae")
enemy_name = "Bone Scimitar"
LV = 3
HP = 20
ATK = 11
DEF = 4
EXP = 4

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_lgc47")
hframes = 10
vframes = 4

[node name="Collision box" type="CollisionShape2D" parent="."]
position = Vector2(6.30435, 7.17391)
shape = SubResource("RectangleShape2D_5cx7u")

[node name="PolyphonicAudioPlayer" type="AudioStreamPlayer2D" parent="."]
script = ExtResource("4_g6mor")
audio_library = SubResource("Resource_d3atb")

[node name="DamageLocation" type="Marker2D" parent="."]
position = Vector2(1.30435, -23.913)
script = ExtResource("8_pbxox")
damage_node = ExtResource("9_g8e0w")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6.73913, 8.26087)
shape = SubResource("RectangleShape2D_q5s4o")

[node name="Timer" type="Timer" parent="Area2D"]

[node name="Sword" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Hitbox" type="CollisionShape2D" parent="Sword"]
position = Vector2(-21.087, 8.04348)
shape = SubResource("RectangleShape2D_01brj")
disabled = true

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "player", "animation")]
script = SubResource("GDScript_8q4jf")
initial_state = NodePath("Idle")
player = NodePath("..")
animation = NodePath("../AnimationPlayer")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("hitbox_iframe")]
script = ExtResource("10_gf0n5")
hitbox_iframe = NodePath("../../Area2D/Hitbox")

[node name="Moving" type="Node" parent="StateMachine" node_paths=PackedStringArray("hitbox_iframe", "timer_attack", "timer_direction")]
script = ExtResource("11_rrmqf")
hitbox_iframe = NodePath("../../Area2D/Hitbox")
timer_attack = NodePath("Attack")
timer_direction = NodePath("ChangeDirection")
SPEED = 4000.0

[node name="Attack" type="Timer" parent="StateMachine/Moving"]
wait_time = 0.5

[node name="ChangeDirection" type="Timer" parent="StateMachine/Moving"]
wait_time = 0.5

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("hitbox_iframe")]
script = ExtResource("12_dyui7")
hitbox_iframe = NodePath("../../Area2D/Hitbox")

[node name="Dying" type="Node" parent="StateMachine" node_paths=PackedStringArray("hitbox_iframe", "sword_hitbox")]
script = ExtResource("13_804yl")
hitbox_iframe = NodePath("../../Area2D/Hitbox")
sword_hitbox = NodePath("../../Sword/Hitbox")
dying_scene = ExtResource("14_l3b8s")

[node name="Area of Vision" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area of Vision"]
visible = false
position = Vector2(7.6087, 4.67391)
shape = SubResource("RectangleShape2D_vkvec")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ipue8")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Area2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Sword" to="." method="_on_sword_body_entered"]
[connection signal="timeout" from="StateMachine/Moving/Attack" to="StateMachine/Moving" method="_on_attack_timeout"]
[connection signal="timeout" from="StateMachine/Moving/ChangeDirection" to="StateMachine/Moving" method="_on_change_direction_timeout"]
[connection signal="body_entered" from="Area of Vision" to="StateMachine/Idle" method="_on_area_of_vision_body_entered"]
